--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <html>
  <head>
   <title>Al Wold</title>
+  <link rel="stylesheet" href="alwold.css" />
  </head>
  <body>
-  <p>
-  <a href="http://alwold.wordpress.com">blog</a> |
-  <a href="/gallery">gallery</a> |
-  <a href="http://www.flickr.com/photos/alwold">flickr</a> | 
-  <a href="http://del.icio.us/alwold">delicious</a> |
-  <a href="http://www.facebook.com/alwold">facebook</a> |
-  <a href="aim:goim?screenname=alwold">aim</a> |
-  <a href="http://www.linkedin.com/pub/dir/albert/wold">linkedin</a> |
-  <a href="/~alwold/cv.html">resume</a> |
-  <a href="http://github.com/alwold">github</a> |
-  <a href="/drupal/">recipes</a>
-  </p>
-  <p>
-   <a href="https://alwold.com/confluence">Confluence</a> | <a href="https://alwold.com/jira">JIRA</a>
-  </p>
+  <div class="links">
+    <a href="http://blog.alwold.com">blog</a> |
+    <a href="/gallery">gallery</a> |
+    <a href="http://www.flickr.com/photos/alwold">flickr</a> | 
+    <a href="http://del.icio.us/alwold">delicious</a> |
+    <a href="http://www.facebook.com/alwold">facebook</a> |
+    <a href="aim:goim?screenname=alwold">aim</a> |
+    <a href="http://www.linkedin.com/profile/view?id=9394511">linkedin</a> |
+    <a href="/~alwold/cv.html">resume</a> |
+    <a href="http://github.com/alwold">github</a> |
+    <a href="/drupal/">recipes</a>
+  </div>
+  <div class="top">
+    <img src="photo.jpg" />
+    <h1>Al Wold</h1>
+    <p>
+      Hello, I'm a software developer providing contract development services. I specialize in Java, Ruby on Rails, iOS and Android.
+    </p>
+    <div class="clear"></div>
+  </div>
+  <div class="bottom">
+    <p>
+     <a href="https://alwold.com/confluence">Confluence</a> | <a href="https://alwold.com/jira">JIRA</a>
+    </p>
+  </div>
  </body>
 </html>
