move resume in here

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="http://www.facebook.com/alwold">facebook</a> |
     <a href="aim:goim?screenname=alwold">aim</a> |
     <a href="http://www.linkedin.com/profile/view?id=9394511">linkedin</a> |
-    <a href="/~alwold/cv.html">resume</a> |
+    <a href="cv.html">resume</a> |
     <a href="http://github.com/alwold">github</a> |
     <a href="/drupal/">recipes</a>
   </div>
