update with latest from my web site

--- a/cv.html
+++ b/cv.html
@@ -43,8 +43,20 @@
   <p/>
   602.614.3736<br/>
   <p/>
-  alwold@gmail.com 
-  <p/>
+  alwold@alwold.com 
+  <p>
+   https://github.com/alwold
+  </p>
+  <div id="summary">
+   <div class="sectionTitle">
+    Summary
+   </div>
+   <ul>
+    <li>Experienced developer with 15 years of professional experience</li>
+    <li>Constantly researching/testing new technologies to stay up to date</li>
+    <li>Pragmatic approach to reconciling technology with business requirements and resource constraints</li>
+   </ul>
+  </div>
   <div id="education"> 
    <div class="sectionTitle">
     Education
@@ -66,9 +78,43 @@
    </div>
    <p/>
   </div>
+  <div id="skills">
+   <div class="sectionTitle">
+    Skills
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">
+    Applications
+    </span>
+    <br/>
+    Microsoft Office, Outlook/Exchange, Kerberos, AFS, NFS, SSH, dump/restore, tar, ant, Tomcat, Apache, Websphere, Sybase ASE, DB2, PostgreSQL, mySQL, 
+    Windows Installer (MSI)/WiX, CVS, Eclipse, Visual Studio 2003/2005, Confluence, JIRA, Maven, CAS, Sakai, uPortal, VMWare, Xen virtualization, Drupal, Apache Solr, git, Subversion
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">
+     Programming APIs
+    </span>
+    <br/>
+    Java J2SE, J2EE, J2ME, Servlets, JSP, JDBC, JavaMail, .NET Framework, Windows Forms, Web Forms, (N)Hibernate, JUnit, Qualcomm BREW, 
+    Spring, Tapestry, JSF, log4j, AJAX, YUI, Drupal module API, iOS, Ruby on Rails, Android, Sencha Touch, PhoneGap/Cordova
+   </div>
+  </div>
   <div id="experience">
    <div class="sectionTitle">
     Work Experience
+   </div>
+   <div class="subsection">
+    9/2011 - Current<br/>
+    Software Developer/Owner<br/>
+    Wold Technologies, Inc.
+    <p/>
+    <ul>
+     <li>Provide contract software development services to a wide range of companies</li>
+     <li>Assist with project planning, requirements gathering, product selection</li>
+     <li>Develop custom software solutions in Java, Ruby on Rails, iOS, Android, etc.</li>
+     <li>Provide services to test and deploy software to a production environment</li>
+     <li>Assist with developer program enrollment/app store certifications for iOS/Android</li>
+    </ul>
    </div>
    <div class="subsection">
     6/2007 - 9/2011<br/>
@@ -76,7 +122,7 @@
     Arizona State University, University Technology Office<br/>
     <p/>
     <ul>
-     <li>Developed and supported applications to support ASU students, faculty and staff</li>
+     <li>Developed and supported high volume applications to support ASU students, faculty and staff</li>
      <li>Developed software to support the IDEAL project, a statewide K-12 learning platform</li>
      <li>Maintained project management tools to support developers across the University</li>
      <li>Founded the ASU Open Source community site to provide a central resource for ASU-sourced projects</li>
@@ -110,37 +156,26 @@
      <li>Deployed uPortal as a campus-wide portal system</li>
    </div>
   </div>
-  <div id="skills">
-   <div class="sectionTitle">
-    Skills
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">
-     Operating Systems
-    </span>
-    <br/>
-    Windows (95/98/NT/2000/XP), MS-DOS, Unix (Solaris, IRIX, HP-UX, Linux, BSD), Mac OS X 
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">
-    Applications
-    </span>
-    <br/>
-    Microsoft Office, Outlook/Exchange, Kerberos, AFS, NFS, SSH, dump/restore, tar, ant, Tomcat, Apache, Websphere, Sybase ASE, DB2, PostgreSQL, mySQL, 
-    Windows Installer (MSI)/WiX, CVS, Eclipse, Visual Studio 2003/2005, Confluence, JIRA, Maven, CAS, Sakai, uPortal, VMWare, Xen virtualization, Drupal
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">
-     Programming APIs
-    </span>
-    <br/>
-    Java J2SE, J2EE, J2ME, Servlets, JSP, JDBC, JavaMail, .NET Framework, Windows Forms, Web Forms, (N)Hibernate, JUnit, Qualcomm BREW, 
-    Spring, Tapestry, JSF, log4j, AJAX, YUI, Drupal module API, iOS, Ruby on Rails
-   </div>
-  </div>
   <div id="projects">
    <div class="sectionTitle">
     Major Projects
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">Find My Train</span>
+    <p>
+    Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
+    users to view a list and map of stations, and view schedule times for all stops for the current day. This application was started at Phoenix Startup
+    Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did many customer development interviews with light
+    rail riders in order to determine the marketability and optimal set of features for the application.
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">ASU Directory</span>
+    <br/>
+    Arizona State University
+    <p/>
+    Redesigned the backend systems to bring together student/faculty/staff data from various enterprise systems, including Peoplesoft and legacy data sources.
+    Created a high performance synchronization process to provide hourly updates to data, replacing the previous system which ran once a day. Added an Apache Solr Cloud
+    environment with an index of data for easier searching from user-facing applications. 
    </div>
    <div class="subsection">
     <span class="subsectionTitle">Course Enrollment Manager</span>
@@ -268,9 +303,5 @@
     <br/>
     Introduction to the Internet
   </div>
-  <div id="languages">
-   <div class="sectionTitle">Foreign languages</div>
-   Basic Spanish skills
-  </div> 
  </body>
 </html>
