- add custom font - change headers to gray

--- a/cv.html
+++ b/cv.html
@@ -1,27 +1,27 @@
 <html>
  <head>
   <title>Albert Wold: Curriculum Vitae</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
  </head>
  <style>
   body {
-     font-family: sans-serif;
-     font-size: 10pt;
+     font-family: 'Open Sans', sans-serif;
+     font-size: 12pt;
   }
   .title {
      font-size: 16pt;
      font-weight: bold;
-     font-style: italic;
      padding-bottom: 10px;
   }
   .name {
-     font-size: 14pt;
+     font-size: 18pt;
      font-weight: bold;
   }
   .sectionTitle {
      font-weight: bold;
      padding: 5px;
      margin-bottom: 5px;
-     background: lightblue;
+     background: lightgray;
   }
   .subsectionTitle {
      border-bottom-style: dotted;
@@ -33,7 +33,7 @@
  </style>
  <body>
   <div class="title">
-   Curriculum Vitae
+   Resume
   </div>
   <div class="name">
    Albert Wold
