make things look a little nicer, add link

--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,8 @@
   body {
      font-family: 'Open Sans', sans-serif;
      font-size: 12pt;
+     padding-left: 40px;
+     padding-right: 40px;
   }
   .title {
      font-size: 16pt;
@@ -21,11 +23,10 @@
      font-weight: bold;
      padding: 5px;
      margin-bottom: 5px;
-     background: lightgray;
+     background: lightgray  ;
   }
   .subsectionTitle {
-     border-bottom-style: dotted;
-     border-bottom-width: 1px;
+    font-weight: bold;
   }
   .subsection {
      padding-bottom: 10px;
@@ -45,7 +46,7 @@
   <p/>
   alwold@alwold.com 
   <p>
-   https://github.com/alwold
+   <a href="https://github.com/alwold">https://github.com/alwold</a>
   </p>
   <div id="summary">
    <div class="sectionTitle">
