--- a/cv.html
+++ b/cv.html
@@ -54,8 +54,9 @@
    </div>
    <ul>
     <li>Experienced developer with 15 years of professional experience</li>
-    <li>Constantly researching/testing new technologies to stay up to date</li>
-    <li>Pragmatic approach to reconciling technology with business requirements and resource constraints</li>
+    <li>Strong interest in keeping up to date with advances in the state of the art in software development</li>
+    <li>Ability to quickly master new technologies in order to get the job done</li>
+    <li>Effective in applying technology to meet business requirements within resource constraints</li>
    </ul>
   </div>
   <div id="education"> 
