reformat some stuff, add wagely.com

--- a/cv.html
+++ b/cv.html
@@ -94,11 +94,20 @@
    </div>
    <div class="subsection">
     <span class="subsectionTitle">
-     Programming APIs
+     Programming Platforms
     </span>
-    <br/>
-    Java J2SE, J2EE, J2ME, Servlets, JSP, JDBC, JavaMail, .NET Framework, Windows Forms, Web Forms, (N)Hibernate, JUnit, Qualcomm BREW, 
-    Spring, Tapestry, JSF, log4j, AJAX, YUI, Drupal module API, iOS, Ruby on Rails, Android, Sencha Touch, PhoneGap/Cordova
+    <ul>
+      <li>Java - J2SE, J2EE, J2ME, Servlets/JSP, JDBC,JavaMail, JUnit, Hibernate, Spring, Tapestry, JSF, log4j</li>
+      <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li>
+      <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li>
+      <li>Javascript - JQuery, Angular, YUI</li>
+      <li>Drupal module API</li>
+      <li>iOS - Objective C, Swift</li>
+      <li>Ruby on Rails - RSpec, Devise, cancan</li>
+      <li>Android - Compatibility API, Programming for device fragmentation</li>
+      <li>Sencha Touch (JavaScript mobile framework)</li>
+      <li>PhoneGap/Cordova</li>
+      <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li>
    </div>
   </div>
   <div id="experience">
@@ -163,6 +172,14 @@
     Major Projects
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">wagely.com</span>
+    <p>
+      Developed payroll application to allow small businesses to pay employees, deduct taxes from paychecks, e-File quarterly withholding returns with federal/state.
+      The application front-end was developed in Ruby on Rails, with a Java backend for processing e-File tax transactions with state/federal governments. Developed
+      a full test suite of unit and functional tests in RSpec to ensure application works per specifications.
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">Find My Train</span>
     <p>
     Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
@@ -175,7 +192,7 @@
     <br/>
     Arizona State University
     <p/>
-    Redesigned the backend systems to bring together student/faculty/staff data from various enterprise systems, including Peoplesoft and legacy data sources.
+    Redesigned backend systems to bring together student/faculty/staff data from various enterprise systems, including Peoplesoft and legacy data sources.
     Created a high performance synchronization process to provide hourly updates to data, replacing the previous system which ran once a day. Added an Apache Solr Cloud
     environment with an index of data for easier searching from user-facing applications. 
    </div>
