rework applications list

--- a/cv.html
+++ b/cv.html
@@ -64,15 +64,6 @@
     Education
    </div>
    <p/>
-<!--
-   <div class="subsection">
-    <span class="subsectionTitle">Graduate coursework</span>
-    <br/>
-    CSE512 - Database System Design
-    <br/>
-    CSE591 - Multimedia and QoS
-   </div>
--->
    <div class="subsection">
     <span class="subsectionTitle">Degrees awarded</span>
     <br/>
@@ -89,8 +80,15 @@
     Applications
     </span>
     <br/>
-    Microsoft Office, Outlook/Exchange, Kerberos, AFS, NFS, SSH, dump/restore, tar, ant, Tomcat, Apache, Websphere, Sybase ASE, DB2, PostgreSQL, mySQL, 
-    Windows Installer (MSI)/WiX, CVS, Eclipse, Visual Studio 2003/2005, Confluence, JIRA, Maven, CAS, Sakai, uPortal, VMWare, Xen virtualization, Drupal, Apache Solr, git, Subversion
+    <uL>
+      <li>IDEs/editors - Eclipse, IntelliJ, XCode, Sublime Text, vi, Visual Studio</li>
+      <li>Source control - git, Mercurial, Subversion, CVS</li>
+      <li>Build tools - ant, Maven, gradle</li>
+      <li>Databases - PostgreSQL, MySQL, Oracle Database, Sybase, DB2</li>
+      <li>App/Web servers - Tomcat, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
+      <li>Unix tools - Kerberos, AFS, NFS, SSH, dump/restore, tar</li>
+      <li>Project management - Confluence, JIRA</li>
+      <li>Other - Windows Installer (MSI)/WiX, CAS, Sakai, uPortal, VMWare, Xen virtualization, Drupal, Apache Solr</li>
    </div>
    <div class="subsection">
     <span class="subsectionTitle">
