--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
    </div>
    <ul>
     <li>Experienced developer with 15 years of professional experience</li>
-    <li>Strong interest in keeping up to date with advances in the state of the art in software development</li>
+    <li>Strong interest in keeping up to date with advances in software development tools and techniques</li>
     <li>Ability to quickly master new technologies in order to get the job done</li>
     <li>Effective in applying technology to meet business requirements within resource constraints</li>
    </ul>
@@ -88,7 +88,7 @@
       <li>App/Web servers - Tomcat, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
       <li>Unix tools - Kerberos, AFS, NFS, SSH, dump/restore, tar</li>
       <li>Project management - Confluence, JIRA</li>
-      <li>Other - Windows Installer (MSI)/WiX, CAS, Sakai, uPortal, VMWare, Xen virtualization, Drupal, Apache Solr</li>
+      <li>Other - JA-SIG CAS, Sakai, VMWare, Xen virtualization, Drupal, Apache Solr</li>
    </div>
    <div class="subsection">
     <span class="subsectionTitle">
@@ -106,6 +106,7 @@
       <li>Sencha Touch (JavaScript mobile framework)</li>
       <li>PhoneGap/Cordova</li>
       <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li>
+      <li>Web - HTML, CSS</li>
    </div>
   </div>
   <div id="experience">
