clean up projects list

--- a/cv.html
+++ b/cv.html
@@ -245,32 +245,9 @@
     <br/>
     Trimble Navigation<br/>
     <p/>
-    Ported the Trimble Outdoors J2ME-based mobile application to Qualcomm BREW environment for use on a wider range of mobile devices.
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">GuideWorx GPS</span>
-    <br/>
-    Trimble Navigation<br/>
-    <p/>
-    Worked with a software partner to add turn-by-turn driving directions to Java-enabled handsets supported by the Trimble Outdoors product.
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">ASMTP Spam Filter</span>
-    <br/>
-    Arizona State University<br/>
-    <p/>
-    Deployed the ASMTP spam filtering product by ESCOM (http://www.escom.com).  Developed a custom J2EE web interface for users to manage 
-    their filtered mail and configure their spam filter settings. 
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">Faculty/Staff Department Directory</span>
-    <br/>
-    Arizona State University<br/>
-    <p/>
-    Designed a searchable hierarchical directory for ASU Faculty and Staff.  Various staff members administer the directory across the 
-    University via a web interface.  It is searchable via a web site and is used to generate the annual printed student/faculty/staff 
-    directory.  Work included developing a database schema on Sybase, a Java object model to manipulate the database and manage 
-    authorization, several front end servlets for administration and searching, as well as a Java application to extract data for publishing. 
+    Ported the Trimble Outdoors J2ME-based mobile application to Qualcomm BREW environment for use on a wider range of mobile devices. This
+    involved taking a Java based application, and porting it to C/C++. A strong emphasis was made on retaining as much of the original 
+    organization as possible, to allow developers to switch between the code bases more easily.
    </div>
   </div>
   <div id="opensource">
