- add blog - move work experience to top

--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title>Albert Wold: Curriculum Vitae</title>
+  <title>Albert Wold: Resume</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
  </head>
  <style>
@@ -48,6 +48,9 @@
   <p>
    <a href="https://github.com/alwold">https://github.com/alwold</a>
   </p>
+  <p>
+  <a href="http://blog.alwold.com">http://blog.alwold.com</a>
+  </p>
   <div id="summary">
    <div class="sectionTitle">
     Summary
@@ -58,56 +61,6 @@
     <li>Ability to quickly master new technologies in order to get the job done</li>
     <li>Effective in applying technology to meet business requirements within resource constraints</li>
    </ul>
-  </div>
-  <div id="education"> 
-   <div class="sectionTitle">
-    Education
-   </div>
-   <p/>
-   <div class="subsection">
-    <span class="subsectionTitle">Degrees awarded</span>
-    <br/>
-    BS, Computer Science, Arizona State University, May 2003
-   </div>
-   <p/>
-  </div>
-  <div id="skills">
-   <div class="sectionTitle">
-    Skills
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">
-    Applications
-    </span>
-    <br/>
-    <uL>
-      <li>IDEs/editors - Eclipse, IntelliJ, XCode, Sublime Text, vi, Visual Studio</li>
-      <li>Source control - git, Mercurial, Subversion, CVS</li>
-      <li>Build tools - ant, Maven, gradle</li>
-      <li>Databases - PostgreSQL, MySQL, Oracle Database, Sybase, DB2</li>
-      <li>App/Web servers - Tomcat, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
-      <li>Unix tools - Kerberos, AFS, NFS, SSH, dump/restore, tar</li>
-      <li>Project management - Confluence, JIRA</li>
-      <li>Other - JA-SIG CAS, Sakai, VMWare, Xen virtualization, Drupal, Apache Solr</li>
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">
-     Programming Platforms
-    </span>
-    <ul>
-      <li>Java - J2SE, J2EE, J2ME, Servlets/JSP, JDBC,JavaMail, JUnit, Hibernate, Spring, Tapestry, JSF, log4j</li>
-      <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li>
-      <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li>
-      <li>Javascript - JQuery, Angular, YUI</li>
-      <li>Drupal module API</li>
-      <li>iOS - Objective C, Swift</li>
-      <li>Ruby on Rails - RSpec, Devise, cancan</li>
-      <li>Android - Compatibility API, Programming for device fragmentation</li>
-      <li>Sencha Touch (JavaScript mobile framework)</li>
-      <li>PhoneGap/Cordova</li>
-      <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li>
-      <li>Web - HTML, CSS</li>
-   </div>
   </div>
   <div id="experience">
    <div class="sectionTitle">
@@ -166,7 +119,56 @@
      <li>Deployed uPortal as a campus-wide portal system</li>
    </div>
   </div>
-  <div id="projects">
+  <div id="skills">
+   <div class="sectionTitle">
+    Skills
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">
+    Applications
+    </span>
+    <br/>
+    <uL>
+      <li>IDEs/editors - Eclipse, IntelliJ, XCode, Sublime Text, vi, Visual Studio</li>
+      <li>Source control - git, Mercurial, Subversion, CVS</li>
+      <li>Build tools - ant, Maven, gradle</li>
+      <li>Databases - PostgreSQL, MySQL, Oracle Database, Sybase, DB2</li>
+      <li>App/Web servers - Tomcat, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
+      <li>Unix tools - Kerberos, AFS, NFS, SSH, dump/restore, tar</li>
+      <li>Project management - Confluence, JIRA</li>
+      <li>Other - JA-SIG CAS, Sakai, VMWare, Xen virtualization, Drupal, Apache Solr</li>
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">
+     Programming Platforms
+    </span>
+    <ul>
+      <li>Java - J2SE, J2EE, J2ME, Servlets/JSP, JDBC,JavaMail, JUnit, Hibernate, Spring, Tapestry, JSF, log4j</li>
+      <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li>
+      <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li>
+      <li>Javascript - JQuery, Angular, YUI</li>
+      <li>Drupal module API</li>
+      <li>iOS - Objective C, Swift</li>
+      <li>Ruby on Rails - RSpec, Devise, cancan</li>
+      <li>Android - Compatibility API, Programming for device fragmentation</li>
+      <li>Sencha Touch (JavaScript mobile framework)</li>
+      <li>PhoneGap/Cordova</li>
+      <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li>
+      <li>Web - HTML, CSS</li>
+   </div>
+  </div>
+  <div id="education"> 
+   <div class="sectionTitle">
+    Education
+   </div>
+   <p/>
+   <div class="subsection">
+    <span class="subsectionTitle">Degrees awarded</span>
+    <br/>
+    BS, Computer Science, Arizona State University, May 2003
+   </div>
+   <p/>
+  </div>  <div id="projects">
    <div class="sectionTitle">
     Major Projects
    </div>
