get rid of "major"

--- a/cv.html
+++ b/cv.html
@@ -170,7 +170,7 @@
    <p/>
   </div>  <div id="projects">
    <div class="sectionTitle">
-    Major Projects
+    Projects
    </div>
    <div class="subsection">
     <span class="subsectionTitle">wagely.com</span>
