add placeholders for new projects

--- a/cv.html
+++ b/cv.html
@@ -181,12 +181,21 @@
     </p>
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">RubyRide App</span>
+    <p>
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">Find My Train</span>
     <p>
     Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
     users to view a list and map of stations, and view schedule times for all stops for the current day. This application was started at Phoenix Startup
     Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did many customer development interviews with light
     rail riders in order to determine the marketability and optimal set of features for the application.
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">GetMyClass.com</span>
+    <p>
    </div>
    <div class="subsection">
     <span class="subsectionTitle">ASU Directory</span>
@@ -200,7 +209,7 @@
    <div class="subsection">
     <span class="subsectionTitle">Course Enrollment Manager</span>
     <br/>
-    Arizona State University/IDEAL
+    Arizona State University
     <p/>
     Course Enrollment Manager is an application originally developed for ASU which synchronizes enrollment data between the student information system and online learning
     systems such as Blackboard, Sakai and iTunesU.  This application was abstracted to remove ASU-specific code and used to provision courses
