- rework some project descriptions - add java day presentation

--- a/cv.html
+++ b/cv.html
@@ -175,7 +175,7 @@
    <div class="subsection">
     <span class="subsectionTitle">wagely.com</span>
     <p>
-      Developed payroll application to allow small businesses to pay employees, deduct taxes from paychecks, e-File quarterly withholding returns with federal/state.
+      Developed payroll application to allow small businesses to pay employees, deduct taxes from paychecks, e-File quarterly withholding returns with federal/state revenue departments.
       The application front-end was developed in Ruby on Rails, with a Java backend for processing e-File tax transactions with state/federal governments. Developed
       a full test suite of unit and functional tests in RSpec to ensure application works per specifications.
     </p>
@@ -189,8 +189,8 @@
     <span class="subsectionTitle">Find My Train</span>
     <p>
     Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
-    users to view a list and map of stations, and view schedule times for all stops for the current day. This application was started at Phoenix Startup
-    Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did many customer development interviews with light
+    users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
+    Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
     rail riders in order to determine the marketability and optimal set of features for the application.
    </div>
    <div class="subsection">
@@ -203,7 +203,7 @@
     Arizona State University
     <p/>
     Redesigned backend systems to bring together student/faculty/staff data from various enterprise systems, including Peoplesoft and legacy data sources.
-    Created a high performance synchronization process to provide hourly updates to data, replacing the previous system which ran once a day. Added an Apache Solr Cloud
+    Created a fast, high performance synchronization process to provide hourly updates to data, replacing the previous system which ran once a day. Added an Apache Solr Cloud
     environment with an index of data for easier searching from user-facing applications. 
    </div>
    <div class="subsection">
@@ -229,17 +229,18 @@
     <br/>
     Trimble Navigation<br/>
     <p/>
-    Designed and built a J2ME-based application to run on various mobile devices which allows users to navigate using GPS on a pre-defined trail.  
-    The application is targeted towards the outdoor enthusiast and available from various wireless carriers.
+    Designed and built a mobile application for outdoor recreational GPS naviation, with a focus on hiking. Developed a C# Windows application and
+    ASP.NET-based web site to synchronize data with the mobile application.  The app was initially developed for the Java ME platform, and later ported to Qualcomm
+    BREW and Blackberry to increase device/carrier reach.
    </div>
    <div class="subsection">
     <span class="subsectionTitle">uPortal development/deployment (myASU)</span>
     <br/>
     Arizona State University <br/>
     <p/> 
-    Deployed an instance of the uPortal product (http://www.ja-sig.org), a J2EE portal designed for higher education.  This work included 
-    writing an authentication module to support ASU's single sign-on environment, as well as configuring connections to databases, LDAP, etc.  
-    This also included writing various channels for the portal in Java, as well as making custom modifications to the portal itself. 
+    Deployed an instance of the uPortal product (http://www.ja-sig.org), to provide a centralized portal to bring together information for ASU
+    students, faculty and staff. Developed an authentication module to support ASU's single sign-on environment, configured connections to databases, LDAP, etc.  
+    Developed various "channels" for the portal in Java to bring in information from campus data sources and supported other developers doing channel development.
    </div>
    <div class="subsection">
     <span class="subsectionTitle">Electronic Messaging Menu Application (EMMA)</span>
@@ -274,6 +275,11 @@
   </div>
   <div id="speaking">
    <div class="sectionTitle">Presentations</div>
+   <div class="subsection">
+    <span class="subsectionTitle">ASU/UA/NAU Java Day - April 2010</span>
+    <br/>
+    Integration between Java applications and PeopleSoft
+   </div>
    <div class="subsection">
     <span class="subsectionTitle">ASU Web Integration Team - Brown Bag - July 2008</span>
     <br/>
