- add descriptions for some new projects - rework cem project to flow more like the others

--- a/cv.html
+++ b/cv.html
@@ -183,19 +183,26 @@
    <div class="subsection">
     <span class="subsectionTitle">RubyRide App</span>
     <p>
+      Developed an app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
+      The info is communicated to a server and a car is dispatched. The app was developed for the iPhone and communicates with a Node.js REST backend.
     </p>
    </div>
    <div class="subsection">
     <span class="subsectionTitle">Find My Train</span>
     <p>
-    Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
-    users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
-    Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
-    rail riders in order to determine the marketability and optimal set of features for the application.
+      Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
+      users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
+      Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
+      rail riders in order to determine the marketability and optimal set of features for the application.
+    </p>
    </div>
    <div class="subsection">
     <span class="subsectionTitle">GetMyClass.com</span>
     <p>
+      Developed a service to monitor college class availability for students wishing to enroll in a class that is currently full. The service periodically monitors
+      class availability and notifies users via text message or email if a spot opens up. The app and backend services were developed with Ruby on Rails and integrate
+      with Twilio for text messaging and Stripe for credit card processing.
+    </p>
    </div>
    <div class="subsection">
     <span class="subsectionTitle">ASU Directory</span>
@@ -211,9 +218,9 @@
     <br/>
     Arizona State University
     <p/>
-    Course Enrollment Manager is an application originally developed for ASU which synchronizes enrollment data between the student information system and online learning
-    systems such as Blackboard, Sakai and iTunesU.  This application was abstracted to remove ASU-specific code and used to provision courses
-    for K-12 institutions under the IDEAL project.
+    Refactored the Course Enrollment Manager (CEM) to convert it from an ASU-specific system to a generic solution for any educational institution. Developed integration
+    for schools operating under the IDEAL project, an Arizona partnership between several K-12 school districts. CEM is an application originally developed for ASU which synchronizes enrollment data between the student information systems and online learning
+    systems such as Blackboard, Sakai and iTunesU. 
    </div>
    <div class="subsection">
     <span class="subsectionTitle">Trimble Outdoors BREW port</span>
