--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@
    </div>
    <ul>
     <li>Experienced developer with 15 years of professional experience</li>
-    <li>Strong interest in keeping up to date with advances in software development tools and techniques</li>
+    <li>Committed to keeping up to date with advances in software development tools and techniques</li>
     <li>Ability to quickly master new technologies in order to get the job done</li>
     <li>Effective in applying technology to meet business requirements within resource constraints</li>
    </ul>
@@ -73,10 +73,10 @@
     <p/>
     <ul>
      <li>Provide contract software development services to a wide range of companies</li>
-     <li>Assist with project planning, requirements gathering, product selection</li>
      <li>Develop custom software solutions in Java, Ruby on Rails, iOS, Android, etc.</li>
+     <li>Consult with clients on project planning, requirements gathering and product selection</li>
      <li>Provide services to test and deploy software to a production environment</li>
-     <li>Assist with developer program enrollment/app store certifications for iOS/Android</li>
+     <li>Assist clients with enrolling in developer programs and preparing software for app store approval</li>
     </ul>
    </div>
    <div class="subsection">
@@ -99,7 +99,7 @@
     Trimble Navigation Limited<br/>
     <p/>
     <ul>
-     <li>Developed a line of GPS-based fitness and driving applications for mobile devices</li>
+     <li>Developed GPS-based fitness and driving applications for mobile devices</li>
      <li>Managed the process of porting and maintaining the mobile (J2ME/BREW/Blackberry) application on over 50 devices for several major wireless carriers</li>
      <li>Developed a Windows desktop application to integrate with the mobile devices</li>
      <li>Developed a web site to share activity-based information</li>
@@ -183,8 +183,8 @@
    <div class="subsection">
     <span class="subsectionTitle">RubyRide App</span>
     <p>
-      Developed an app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
-      The info is communicated to a server and a car is dispatched. The app was developed for the iPhone and communicates with a Node.js REST backend.
+      Developed an iPhone app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
+      The info is communicated to a server and a car is dispatched. The app was developed for the iOS and communicates with a Node.js REST backend.
     </p>
    </div>
    <div class="subsection">
@@ -193,7 +193,7 @@
       Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
       users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
       Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
-      rail riders in order to determine the marketability and optimal set of features for the application.
+      rail riders in order to determine the marketability and optimal set of features for the application. This app is currently available in the iOS and Google Play app stores.
     </p>
    </div>
    <div class="subsection">
