add technical details on jobs

--- a/cv.html
+++ b/cv.html
@@ -85,9 +85,9 @@
     Arizona State University, University Technology Office<br/>
     <p/>
     <ul>
-     <li>Developed and supported high volume applications to support ASU students, faculty and staff</li>
+     <li>Developed and supported high volume applications to support ASU students, faculty and staff, with a focus on Java-based applications running on Tomcat</li>
      <li>Developed software to support the IDEAL project, a statewide K-12 learning platform</li>
-     <li>Maintained project management tools to support developers across the University</li>
+     <li>Maintained project management tools (JIRA, Subversion, etc.) to support developers across the University</li>
      <li>Founded the ASU Open Source community site to provide a central resource for ASU-sourced projects</li>
      <li>Consulted other developers on architectural decisions and technical issues</li>
      <li>Served on the Architectural Review Board to review design of various applications across the University</li>
@@ -99,10 +99,10 @@
     Trimble Navigation Limited<br/>
     <p/>
     <ul>
-     <li>Developed GPS-based fitness and driving applications for mobile devices</li>
-     <li>Managed the process of porting and maintaining the mobile (J2ME/BREW/Blackberry) application on over 50 devices for several major wireless carriers</li>
-     <li>Developed a Windows desktop application to integrate with the mobile devices</li>
-     <li>Developed a web site to share activity-based information</li>
+     <li>Developed GPS-based fitness and driving applications for mobile devices running Java ME, Qualcomm BREW and Blackberry</li>
+     <li>Managed the process of porting and maintaining the mobile application on over 50 devices for several major wireless carriers</li>
+     <li>Developed a Windows desktop application using C# and Windows Forms to integrate with the mobile devices</li>
+     <li>Developed an ASP.NET-based web site and web services to share activity-based information</li>
     </ul>
    </div>
    <div class="subsection">
@@ -112,11 +112,11 @@
     <p/>
     <ul>
      <li>Provided support for email systems to the University-wide community</li>
-     <li>Managed central web and email systems</li>
-     <li>Developed the first web-based email system for ASU students</li>
-     <li>Participated in the development of the initial enterprise web application platforms for ASU</li>
-     <li>Provided guidance on development of the ASU single sign on environment</li>
-     <li>Deployed uPortal as a campus-wide portal system</li>
+     <li>Managed central web and email systems, including Microsoft Exchange, Cyrus IMAP, PMDF, Apache, Tomcat, etc.</li>
+     <li>Developed the first web-based email system for ASU students using Java and PHP</li>
+     <li>Participated in the design of the initial enterprise web application platforms for ASU</li>
+     <li>Provided guidance on design of the ASU single sign on environment</li>
+     <li>Deployed uPortal, a Java-based portal product, as a campus-wide portal system</li>
    </div>
   </div>
   <div id="skills">
