move education down

--- a/cv.html
+++ b/cv.html
@@ -157,18 +157,7 @@
      <li>Deployed uPortal, a Java-based portal product, as a campus-wide portal system</li>
    </div>
   </div>
-  <div id="education"> 
-   <div class="sectionTitle">
-    Education
-   </div>
-   <p/>
-   <div class="subsection">
-    <span class="subsectionTitle">Degrees awarded</span>
-    <br/>
-    BS, Computer Science, Arizona State University, May 2003
-   </div>
-   <p/>
-  </div>  <div id="projects">
+  <div id="projects">
    <div class="sectionTitle">
     Projects
    </div>
@@ -258,6 +247,18 @@
     Java using servlets and a PHP-based web mail client based on the free IMP product.  Modified the IMAP client used by PHP to support Kerberos 
     for single sign-on. 
    </div>
+  </div>
+  <div id="education"> 
+   <div class="sectionTitle">
+    Education
+   </div>
+   <p/>
+   <div class="subsection">
+    <span class="subsectionTitle">Degrees awarded</span>
+    <br/>
+    BS, Computer Science, Arizona State University, May 2003
+   </div>
+   <p/>
   </div>
   <div id="opensource">
    <div class="sectionTitle">Open Source Contributions</div>
