add a print stylesheet that reduces the font a bit

--- a/cv.html
+++ b/cv.html
@@ -32,6 +32,11 @@
      padding-bottom: 10px;
   }
  </style>
+ <style media="print">
+  body {
+    font-size: 10pt;
+  }
+ </style>
  <body>
   <div class="title">
    Resume
