add familysearch memories project

--- a/cv.html
+++ b/cv.html
@@ -167,6 +167,15 @@
     Projects
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">FamilySearch Memories App</span>
+    <p>
+      Implementing a new Android application to allow FamilySearch.org members to upload, view and manage photos, audio clips and stories
+      about their ancestors. The app is a new implementation that mirrors functionality in an existing iOS application. Functionality
+      includes authentication, upload and download functionality with a REST API, integration with camera and audio recording/playback
+      functionality in Android. Leading and providing mentoring to a team including another Junior Developer and QA Developer.
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">wagely.com</span>
     <p>
       Developed payroll application to allow small businesses to pay employees, deduct taxes from paychecks, e-File quarterly withholding returns with federal/state revenue departments.
