--- a/cv.html
+++ b/cv.html
@@ -6,17 +6,16 @@
  <style>
   body {
      font-family: 'Open Sans', sans-serif;
-     font-size: 12pt;
      padding-left: 40px;
      padding-right: 40px;
   }
   .title {
-     font-size: 16pt;
+     font-size: 1.25em;
      font-weight: bold;
      padding-bottom: 10px;
   }
   .name {
-     font-size: 18pt;
+     font-size: 1.5em;
      font-weight: bold;
   }
   .sectionTitle {
@@ -34,7 +33,7 @@
  </style>
  <style media="print">
   body {
-    font-size: 10pt;
+    font-size: 8pt;
   }
  </style>
  <body>
