- add familysearch memories - add presentation

--- a/cv.html
+++ b/cv.html
@@ -168,10 +168,10 @@
    <div class="subsection">
     <span class="subsectionTitle">FamilySearch Memories App</span>
     <p>
-      Implementing a new Android application to allow FamilySearch.org members to upload, view and manage photos, audio clips and stories
-      about their ancestors. The app is a new implementation that mirrors functionality in an existing iOS application. Functionality
-      includes authentication, upload and download functionality with a REST API, integration with camera and audio recording/playback
-      functionality in Android. Leading and providing mentoring to a team including another Junior Developer and QA Developer.
+      Implemented a new Android application to allow FamilySearch.org members to upload, view and manage photos, audio clips and stories
+      about their ancestors. The app mirrors functionality in an existing iOS application. Functionality
+      includes authentication, upload and download functionality with a REST API, integration with camera, audio recording/playback
+      and support for several different languages. Led development and provided mentoring to a team including another Junior Developer and QA Developer.
     </p>
    </div>
    <div class="subsection">
@@ -294,6 +294,11 @@
   </div>
   <div id="speaking">
    <div class="sectionTitle">Presentations</div>
+   <div class="subsection">
+    <span class="subsectionTitle">RubyAZ - November 2014</span>
+    <br/>
+    Loading Code in Ruby
+   </div>
    <div class="subsection">
     <span class="subsectionTitle">CocoaHeads/Phoenix iOS Development Group - October 2014</span>
     <br/>
